# python-template

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-validator.yml  python.yml
