[tool.poetry]
name = "python-template"
version = "0.3.0"
description = "Python template for various projects."
authors = ["Arisu Wonderland <arisuchr@riseup.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pylint = "^2.16.1"

[tool.isort]
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
