[tool.poetry]
name = "python-template"
version = "0.4.0"
description = "Python template used in my repositories"
authors = ["Arisu Wonderland <arisuchr@riseup.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"

[tool.pytest.ini_options]
addopts = [ "--import-mode=importlib" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
